--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,288 @@
-<!doctype html><html lang="hi"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Contact</title><link rel="stylesheet" href="assets/style.css"></head><body>
-<header class="header"><div class="container nav"><div class="logo"><img src="assets/logo.svg" alt="URP logo"/><div style="color:white">Uttarakhand Reform Party</div></div></div></header>
-<main class="section container"><h2>Contact</h2><p class="small">Contact details here. जिसका लक्ष्य उत्तराखण्ड में पारदर्शिता और स्थानीय विकास लाना है।</p></main><footer class="footer"><div class="container">© 2025 URP</div></footer></body></html>
+<!doctype html>
+<html lang="hi">
+<head>
+  <meta charset="utf-8">
+  <title>Contact — Uttarakhand Reform Party</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Contact details for Uttarakhand Reform Party (URP) — email, phone and district coordination.">
+
+  <style>
+    :root{
+      --primary:#0a3d62;
+      --primary-soft:#174c91;
+      --accent:#f39c12;
+      --bg:#f5f7fa;
+      --card:#ffffff;
+      --muted:#6b7280;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+      background:var(--bg);
+      color:#111827;
+    }
+    a{text-decoration:none;color:inherit}
+
+    .header{
+      background:linear-gradient(90deg,var(--primary),#3b6df3);
+      color:#fff;
+      position:sticky;
+      top:0;
+      z-index:10;
+      box-shadow:0 4px 14px rgba(15,35,75,0.35);
+    }
+    .container{
+      max-width:1120px;
+      margin:0 auto;
+      padding:0 18px;
+    }
+    .nav{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:12px 0;
+    }
+    .logo-wrap{
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+    .logo-mark{
+      width:36px;
+      height:36px;
+      border-radius:50%;
+      background:#fff;
+      color:var(--primary);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:800;
+      font-size:14px;
+    }
+    .brand-title{
+      font-weight:800;
+      letter-spacing:.03em;
+      font-size:15px;
+    }
+    .navlinks{
+      display:flex;
+      gap:18px;
+      font-size:14px;
+      font-weight:500;
+    }
+    .navlinks a{
+      color:rgba(255,255,255,0.94);
+      padding:4px 0;
+    }
+    .navlinks a.active{
+      border-bottom:2px solid var(--accent);
+    }
+
+    .hero{
+      padding:46px 0 26px;
+      background:
+        radial-gradient(circle at top left,#e1ecff,transparent 55%),
+        radial-gradient(circle at bottom right,#ffe7c7,transparent 55%);
+    }
+    .hero-title{
+      font-size:30px;
+      line-height:1.3;
+      color:#0b2b4a;
+      font-weight:800;
+      margin-bottom:6px;
+    }
+    .hero-sub{
+      font-size:15px;
+      color:#1f2933;
+      max-width:720px;
+    }
+    .hero-kicker{
+      font-size:12px;
+      text-transform:uppercase;
+      letter-spacing:.22em;
+      color:var(--muted);
+      margin-bottom:6px;
+    }
+
+    .section{
+      padding:30px 0;
+    }
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+      gap:14px;
+    }
+    .card{
+      background:var(--card);
+      border-radius:14px;
+      padding:16px 16px 18px;
+      box-shadow:0 10px 26px rgba(15,23,42,0.06);
+    }
+    .card h3, .card h4{
+      font-size:17px;
+      margin-bottom:6px;
+      color:#0b2b4a;
+    }
+    .card p{
+      font-size:13px;
+      color:var(--muted);
+    }
+    .small{font-size:12px;color:var(--muted);}
+    .tag-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:6px;
+      margin-top:6px;
+    }
+    .tag{
+      font-size:11px;
+      border-radius:999px;
+      padding:3px 8px;
+      background:#eef2ff;
+      color:#3730a3;
+    }
+
+    .footer{
+      background:#0b2b4a;
+      color:#fff;
+      padding:22px 0 18px;
+      margin-top:24px;
+      font-size:12px;
+    }
+    .footer-grid{
+      display:flex;
+      flex-wrap:wrap;
+      gap:14px;
+      justify-content:space-between;
+    }
+    .footer a{color:#e5e7eb}
+
+    @media (max-width:900px){
+      .navlinks{display:none;}
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container nav">
+      <div class="logo-wrap">
+        <div class="logo-mark">URP</div>
+        <div class="brand-title">Uttarakhand Reform Party</div>
+      </div>
+      <nav class="navlinks">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="vision.html">Vision</a>
+        <a href="join.html">Join</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="contact.html" class="active">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero-kicker">CONTACT • CONNECT WITH URP</div>
+        <h1 class="hero-title">हमसे संपर्क करें — सुझाव, शिकायत या सहयोग</h1>
+        <p class="hero-sub">
+          URP एक खुला मंच है। अगर आपके पास कोई सुझाव, शिकायत, research idea या ground report है,
+          तो आप सीधे संपर्क कर सकते हैं। हर genuine message पर टीम की नज़र जाएगी।
+        </p>
+      </div>
+    </section>
+
+    <!-- CONTACT CARDS -->
+    <section class="section">
+      <div class="container grid">
+        <div class="card">
+          <h3>Central Contact (राज्य स्तर)</h3>
+          <p class="small">
+            <strong>Email:</strong> contact@uttarakhandreform.org<br>
+            <strong>Phone:</strong> +91 98765 43210<br>
+            <strong>Timing:</strong> 10:00 AM – 6:00 PM (Mon–Sat)
+          </p>
+          <p class="small" style="margin-top:8px;">
+            यहाँ से आपके message को संबंधित जिले या विभाग तक forwarded किया जाएगा।  
+            कृपया विषय साफ़ लिखें — “सुझाव”, “शिकायत”, “research”, “स्वयंसेवक” आदि।
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>District Coordination</h3>
+          <p class="small">
+            हर जिले में एक <strong>District Coordinator</strong> होगा जो volunteers, membership और local events को संभालेगा।
+          </p>
+          <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
+            <li>Dehradun, Haridwar, US Nagar, Nainital — प्रारम्भिक focus जिले।</li>
+            <li>अन्य जिलों के लिए जल्द ही dedicated contact घोषित होंगे।</li>
+          </ul>
+          <p class="small" style="margin-top:6px;">
+            अभी के लिए आप central email पर अपना जिला और विधानसभा लिखकर message भेजें;  
+            संबंधित coordinator आपसे contact करेगा।
+          </p>
+        </div>
+
+        <div class="card">
+          <h3>Social Media & Updates</h3>
+          <p class="small">
+            Official social media handles launch होते ही यहाँ update किए जाएँगे:
+          </p>
+          <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
+            <li>Facebook Page — Uttarakhand Reform Party (official)</li>
+            <li>YouTube Channel — URP Uttarakhand</li>
+            <li>Instagram / X — policy explainers, short videos</li>
+          </ul>
+          <div class="tag-row">
+            <div class="tag">Coming soon</div>
+            <div class="tag">Transparent updates</div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FEEDBACK NOTE -->
+    <section class="section">
+      <div class="container">
+        <div class="card">
+          <h3>Ground Reports & Research Ideas</h3>
+          <p class="small" style="margin-top:4px;">
+            अगर आप किसी क्षेत्रीय समस्या (सड़क, पानी, स्कूल, health, जंगल, पलायन आदि) पर detailed note या data भेजना चाहते हैं,
+            तो कृपया:
+          </p>
+          <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
+            <li>Subject में ज़िले और विधानसभा का नाम लिखें।</li>
+            <li>संक्षेप में समस्या, impact और possible समाधान बिंदुवार लिखें।</li>
+            <li>अगर कोई फोटो / document हो तो उसे भी attach करें।</li>
+          </ul>
+          <p class="small" style="margin-top:6px;">
+            इस तरह के inputs URP की policy teams और manifesto drafting में सीधा इस्तेमाल किए जाएँगे।
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <div>© 2025 Uttarakhand Reform Party</div>
+        <div class="small">Reform-focused political platform for Uttarakhand.</div>
+      </div>
+      <div class="small">
+        <div>Contact: contact@uttarakhandreform.org</div>
+        <div>Phone: +91 98765 43210</div>
+      </div>
+      <div class="small">
+        <div><a href="join.html">Volunteer / Join</a></div>
+        <div><a href="candidates.html">Apply as Candidate</a></div>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
