--- a/contact.html
+++ b/contact.html
@@ -47,17 +47,13 @@
       align-items:center;
       gap:10px;
     }
-    .logo-mark{
-      width:36px;
-      height:36px;
+    .logo-img{
+      width:44px;
+      height:44px;
       border-radius:50%;
-      background:#fff;
-      color:var(--primary);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight:800;
-      font-size:14px;
+      object-fit:cover;
+      background:#ffffff;
+      box-shadow:0 0 0 2px rgba(255,255,255,0.7);
     }
     .brand-title{
       font-weight:800;
@@ -118,29 +114,12 @@
       padding:16px 16px 18px;
       box-shadow:0 10px 26px rgba(15,23,42,0.06);
     }
-    .card h3, .card h4{
+    .card h3{
       font-size:17px;
       margin-bottom:6px;
       color:#0b2b4a;
     }
-    .card p{
-      font-size:13px;
-      color:var(--muted);
-    }
     .small{font-size:12px;color:var(--muted);}
-    .tag-row{
-      display:flex;
-      flex-wrap:wrap;
-      gap:6px;
-      margin-top:6px;
-    }
-    .tag{
-      font-size:11px;
-      border-radius:999px;
-      padding:3px 8px;
-      background:#eef2ff;
-      color:#3730a3;
-    }
 
     .footer{
       background:#0b2b4a;
@@ -155,7 +134,6 @@
       gap:14px;
       justify-content:space-between;
     }
-    .footer a{color:#e5e7eb}
 
     @media (max-width:900px){
       .navlinks{display:none;}
@@ -164,125 +142,68 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="header">
-    <div class="container nav">
-      <div class="logo-wrap">
-        <div class="logo-mark">URP</div>
-        <div class="brand-title">Uttarakhand Reform Party</div>
-      </div>
-      <nav class="navlinks">
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="vision.html">Vision</a>
-        <a href="join.html">Join</a>
-        <a href="candidates.html">Candidates</a>
-        <a href="contact.html" class="active">Contact</a>
-      </nav>
+<header class="header">
+  <div class="container nav">
+    <div class="logo-wrap">
+      <img src="logo%20urp.png" alt="URP logo" class="logo-img">
+      <div class="brand-title">Uttarakhand Reform Party</div>
     </div>
-  </header>
+    <nav class="navlinks">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="vision.html">Vision</a>
+      <a href="join.html">Join</a>
+      <a href="candidates.html">Candidates</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </div>
+</header>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="container">
-        <div class="hero-kicker">CONTACT • CONNECT WITH URP</div>
-        <h1 class="hero-title">हमसे संपर्क करें — सुझाव, शिकायत या सहयोग</h1>
-        <p class="hero-sub">
-          URP एक खुला मंच है। अगर आपके पास कोई सुझाव, शिकायत, research idea या ground report है,
-          तो आप सीधे संपर्क कर सकते हैं। हर genuine message पर टीम की नज़र जाएगी।
+<main>
+  <section class="hero">
+    <div class="container">
+      <div class="hero-kicker">CONTACT • CONNECT WITH URP</div>
+      <h1 class="hero-title">हमसे संपर्क करें</h1>
+      <p class="hero-sub">
+        सुझाव, शिकायत या सहयोग के लिए हमसे सीधे संपर्क करें। आपका feedback URP की policies को मजबूत करेगा।
+      </p>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container grid">
+      <div class="card">
+        <h3>Central Contact</h3>
+        <p class="small">
+          Email: contact@uttarakhandreform.org<br>
+          Phone: +91 98765 43210<br>
+          Timing: 10:00 AM – 6:00 PM
         </p>
       </div>
-    </section>
 
-    <!-- CONTACT CARDS -->
-    <section class="section">
-      <div class="container grid">
-        <div class="card">
-          <h3>Central Contact (राज्य स्तर)</h3>
-          <p class="small">
-            <strong>Email:</strong> contact@uttarakhandreform.org<br>
-            <strong>Phone:</strong> +91 98765 43210<br>
-            <strong>Timing:</strong> 10:00 AM – 6:00 PM (Mon–Sat)
-          </p>
-          <p class="small" style="margin-top:8px;">
-            यहाँ से आपके message को संबंधित जिले या विभाग तक forwarded किया जाएगा।  
-            कृपया विषय साफ़ लिखें — “सुझाव”, “शिकायत”, “research”, “स्वयंसेवक” आदि।
-          </p>
-        </div>
-
-        <div class="card">
-          <h3>District Coordination</h3>
-          <p class="small">
-            हर जिले में एक <strong>District Coordinator</strong> होगा जो volunteers, membership और local events को संभालेगा।
-          </p>
-          <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
-            <li>Dehradun, Haridwar, US Nagar, Nainital — प्रारम्भिक focus जिले।</li>
-            <li>अन्य जिलों के लिए जल्द ही dedicated contact घोषित होंगे।</li>
-          </ul>
-          <p class="small" style="margin-top:6px;">
-            अभी के लिए आप central email पर अपना जिला और विधानसभा लिखकर message भेजें;  
-            संबंधित coordinator आपसे contact करेगा।
-          </p>
-        </div>
-
-        <div class="card">
-          <h3>Social Media & Updates</h3>
-          <p class="small">
-            Official social media handles launch होते ही यहाँ update किए जाएँगे:
-          </p>
-          <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
-            <li>Facebook Page — Uttarakhand Reform Party (official)</li>
-            <li>YouTube Channel — URP Uttarakhand</li>
-            <li>Instagram / X — policy explainers, short videos</li>
-          </ul>
-          <div class="tag-row">
-            <div class="tag">Coming soon</div>
-            <div class="tag">Transparent updates</div>
-          </div>
-        </div>
+      <div class="card">
+        <h3>District Coordination</h3>
+        <p class="small">
+          अपना जिला और विधानसभा लिखकर email करें। संबंधित coordinator आपसे संपर्क करेगा।
+        </p>
       </div>
-    </section>
 
-    <!-- FEEDBACK NOTE -->
-    <section class="section">
-      <div class="container">
-        <div class="card">
-          <h3>Ground Reports & Research Ideas</h3>
-          <p class="small" style="margin-top:4px;">
-            अगर आप किसी क्षेत्रीय समस्या (सड़क, पानी, स्कूल, health, जंगल, पलायन आदि) पर detailed note या data भेजना चाहते हैं,
-            तो कृपया:
-          </p>
-          <ul class="small" style="margin-top:6px;list-style:disc;padding-left:18px;">
-            <li>Subject में ज़िले और विधानसभा का नाम लिखें।</li>
-            <li>संक्षेप में समस्या, impact और possible समाधान बिंदुवार लिखें।</li>
-            <li>अगर कोई फोटो / document हो तो उसे भी attach करें।</li>
-          </ul>
-          <p class="small" style="margin-top:6px;">
-            इस तरह के inputs URP की policy teams और manifesto drafting में सीधा इस्तेमाल किए जाएँगे।
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container footer-grid">
-      <div>
-        <div>© 2025 Uttarakhand Reform Party</div>
-        <div class="small">Reform-focused political platform for Uttarakhand.</div>
-      </div>
-      <div class="small">
-        <div>Contact: contact@uttarakhandreform.org</div>
-        <div>Phone: +91 98765 43210</div>
-      </div>
-      <div class="small">
-        <div><a href="join.html">Volunteer / Join</a></div>
-        <div><a href="candidates.html">Apply as Candidate</a></div>
+      <div class="card">
+        <h3>Social Media</h3>
+        <p class="small">
+          Official pages जल्द launch किए जाएंगे।
+        </p>
       </div>
     </div>
-  </footer>
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="container footer-grid">
+    <div>© 2025 Uttarakhand Reform Party</div>
+    <div>contact@uttarakhandreform.org</div>
+  </div>
+</footer>
 
 </body>
 </html>
