--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       align-items:center;
       gap:10px;
     }
-    /* OLD .logo-mark हटाकर नया image logo class */
+    /* image logo */
     .logo-img{
       width:44px;
       height:44px;
@@ -151,15 +151,6 @@
       color:var(--primary-soft);
       background:#fff;
     }
-    .hero-meta{
-      display:flex;
-      flex-wrap:wrap;
-      gap:18px;
-      margin-top:16px;
-      font-size:12px;
-      color:var(--muted);
-    }
-    .hero-meta strong{color:#111827}
 
     .hero-side{
       flex:1 1 260px;
@@ -331,7 +322,7 @@
   <header class="header">
     <div class="container nav">
       <div class="logo-wrap">
-        <!-- यहीं पर आपका logo use हो रहा है -->
+        <!-- final Kailash logo -->
         <img src="logo%20urp.png" alt="URP logo" class="logo-img">
         <div class="brand-title">Uttarakhand Reform Party</div>
       </div>
@@ -368,17 +359,12 @@
             <a href="join.html" class="btn-primary">URP से जुड़ें</a>
             <a href="vision.html" class="btn-ghost">हमारा विज़न देखें</a>
           </div>
-
-          <div class="hero-meta">
-            <div><strong>70</strong> विधानसभा सीटों पर संगठन की तैयारी</div>
-            <div><strong>45–50</strong> सीटों को serious winning लक्ष्य बनाने की रणनीति</div>
-          </div>
         </div>
 
         <div class="hero-side">
           <div class="hero-card">
             <h3>100-दिन का सुधार कार्यक्रम</h3>
-            <p>पहले 100 दिनों में measurable काम — कागज़ पर नहीं, जनता की नज़र में दिखने वाला बदलाव।</p>
+            <p>पहले 100 दिनों में ऐसा काम जो कागज़ पर नहीं, जनता की नज़र में साफ़ दिखाई दे।</p>
             <div class="hero-kpi">
               <div class="hero-kpi-item">
                 <span>100+</span>
@@ -400,13 +386,14 @@
         <div class="section-header">
           <h2>URP के 6 मुख्य आधार</h2>
           <p>
-            URP slogans से नहीं, clear pillars से चलता है। हर आधार पर measurable commitments और public tracking होगा।
+            URP केवल नारों से नहीं, स्पष्ट और मज़बूत आधारों पर चलता है। 
+            हर आधार के लिए ठोस और मापनीय वादे होंगे, जिनकी सार्वजनिक निगरानी होगी।
           </p>
         </div>
         <div class="grid">
           <div class="card">
             <h3>1. पारदर्शी शासन</h3>
-            <p>हर काम का photo, geo-tag, खर्च और deadline — सब online public dashboard पर।</p>
+            <p>हर काम का फोटो, geo-tag, खर्च और समयसीमा — सब एक सार्वजनिक online dashboard पर।</p>
             <div class="tag-row">
               <div class="tag">Online tracking</div>
               <div class="tag">Citizen audit</div>
@@ -414,7 +401,7 @@
           </div>
           <div class="card">
             <h3>2. पहाड़-केंद्रित नीति</h3>
-            <p>सिर्फ़ मैदानी नहीं — hill blocks के लिए अलग योजना, अलग बजट और priority।</p>
+            <p>सिर्फ़ मैदानी नहीं — hill blocks के लिए अलग योजना, अलग बजट और प्राथमिकता।</p>
             <div class="tag-row">
               <div class="tag">Anti-migration</div>
               <div class="tag">Village clusters</div>
@@ -426,15 +413,15 @@
           </div>
           <div class="card">
             <h3>4. महिला सुरक्षा व सम्मान</h3>
-            <p>मार्केट, school, bus-stand: lighting, CCTV, help-desk और fast response system।</p>
+            <p>मार्केट, स्कूल, बस-स्टैंड: lighting, CCTV, help-desk और तेज़ response system।</p>
           </div>
           <div class="card">
             <h3>5. ग्रामीण आजीविका</h3>
-            <p>Tourism, horticulture, herbal clusters — गाँव से ही रोज़गार, migration मजबूरी नहीं।</p>
+            <p>Tourism, horticulture, herbal clusters — गाँव से ही रोज़गार, पलायन मजबूरी नहीं।</p>
           </div>
           <div class="card">
             <h3>6. स्वच्छ राजनीति</h3>
-            <p>Ticket “connection” से नहीं, साफ criteria से — serious criminal background वालों को जगह नहीं।</p>
+            <p>Ticket “connection” से नहीं, साफ़ criteria से — serious criminal background वालों को जगह नहीं।</p>
           </div>
         </div>
       </div>
@@ -452,8 +439,8 @@
             मुद्दे वहीं हैं। URP मानता है — “पुरानी राजनीति से नया भविष्य नहीं बन सकता”।
           </p>
           <ul class="timeline">
-            <li>20+ साल के report card का ईमानदार review — केवल seat गणित नहीं, काम का हिसाब।</li>
-            <li>UKD जैसी क्षेत्रीय भावना को modern, professional रूप में मजबूत करना — विरोध नहीं, सहयोग।</li>
+            <li>20+ साल के report card का ईमानदार review — केवल सीट गणित नहीं, काम का हिसाब।</li>
+            <li>UKD जैसी क्षेत्रीय भावना को modern, professional रूप में मज़बूत करना — विरोध नहीं, सहयोग।</li>
             <li>Decision-making में youth, women और professionals को पहली line में लाना।</li>
           </ul>
         </div>
@@ -489,7 +476,7 @@
       <div class="container">
         <div class="section-header">
           <h2>तुरंत कैसे जुड़ें?</h2>
-          <p>URP में joining process clear, digital और transparent है — कोई hidden membership या closed circle नहीं।</p>
+          <p>URP में joining process साफ़, digital और transparent है — कोई hidden membership या closed circle नहीं।</p>
         </div>
         <div class="grid">
           <div class="card">
